2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Solaris doesn't support getfsent(3), but it provides equivalent
	  functionality in getvfsent(3C).  Implement Solaris support.

2005-01-02  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: More wrapper functions.  I missed a few macros...  This should
	  complete all macro's defined in <stdio.h> for C99.

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: More wrapper functions.  This should complete C89's <stdio.h>
	  requirements.

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-statvfs.c: Further proving that changing code without compiling is
	  dangerous business...  Compiler fix for OS X.

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* signal.c: Mac OS X portability fixes -- it doesn't provide sighandler_t!

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add signal.c to the build.
	* signal.c: Added.  Contains helper functions to wrap signal(2).

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-statvfs.c: Fix Mac OS X build (statfs.f_frsize doesn't exist on OSX;
	  f_fsid isn't an integral type; fstatfs needs to use fpathconf).

2004-12-29  Jonathan Pryor  <jonpryor@vt.edu>

	* unistd.c: Null-terminate the string returned by readlink(2).  This works
	  around a marshaler "issue".

2004-12-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add GLIB_LIBS to the LIBS line, since we require linking
	  against glib-2.0 (to use g_assert()).

2004-12-28  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Added; wrap <fstab.h> functions: getfsent(3), getfsfile(3), 
	  getfsspec(3).
	* map.c: Add new conversion functions for SyslogOptions, SyslogFacility, 
	  SyslogLevel; see syslog(3) for details.
	* map.h: Add new conversion functions and values for SyslogOptions, 
	  SyslogFacility, SyslogLevel; see syslog(3) for details.
	* Makefile.am (MPH_SOURCE): add fstab.c, sys-statvfs.c, x-struct-str.c.
	* mph.h: Document location for Mac OS X man page documentation; add